hphp/hack/test/typecheck/aktuple/list_ok.php.exp
File "list_ok.php", line 9, characters 15-21:
Invalid argument (Typing[4110])
File "list_ok.php", line 13, characters 22-27:
Expected string
File "list_ok.php", line 6, characters 15-15:
But got int
